monitors/parser/PastMTLParser.py
# Generated from PastMTL.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PastMTLParser ( Parser ):

    grammarFileName = "PastMTL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'!'", "'not'", "'&&'", "'and'", 
                     "'||'", "'or'", "'->'", "'implies'", "'once'", "'['", 
                     "','", "']'", "'inf'", "'always'", "'since'", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IDENTIFIER", 
                      "NUMBER", "WS" ]

    RULE_namedExpr = 0
    RULE_expr = 1
    RULE_atom = 2
    RULE_idlist = 3

    ruleNames =  [ "namedExpr", "expr", "atom", "idlist" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    IDENTIFIER=19
    NUMBER=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class NamedExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.child = None # ExprContext

        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def IDENTIFIER(self):
            return self.getToken(PastMTLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PastMTLParser.RULE_namedExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedExpr" ):
                listener.enterNamedExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedExpr" ):
                listener.exitNamedExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamedExpr" ):
                return visitor.visitNamedExpr(self)
            else:
                return visitor.visitChildren(self)




    def namedExpr(self):

        localctx = PastMTLParser.NamedExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_namedExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 8
                localctx.name = self.match(PastMTLParser.IDENTIFIER)
                self.state = 9
                self.match(PastMTLParser.T__0)


            self.state = 12
            localctx.child = self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PastMTLParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class TimedAlwaysInfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.l = None # Token
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(PastMTLParser.NUMBER, 0)
        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimedAlwaysInf" ):
                listener.enterTimedAlwaysInf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimedAlwaysInf" ):
                listener.exitTimedAlwaysInf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedAlwaysInf" ):
                return visitor.visitTimedAlwaysInf(self)
            else:
                return visitor.visitChildren(self)


    class TimedAlwaysContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.l = None # Token
            self.u = None # Token
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(PastMTLParser.NUMBER)
            else:
                return self.getToken(PastMTLParser.NUMBER, i)
        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimedAlways" ):
                listener.enterTimedAlways(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimedAlways" ):
                listener.exitTimedAlways(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedAlways" ):
                return visitor.visitTimedAlways(self)
            else:
                return visitor.visitChildren(self)


    class NegationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegation" ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegation" ):
                listener.exitNegation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)


    class OnceContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOnce" ):
                listener.enterOnce(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOnce" ):
                listener.exitOnce(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOnce" ):
                return visitor.visitOnce(self)
            else:
                return visitor.visitChildren(self)


    class TimedSinceContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.l = None # Token
            self.u = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PastMTLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PastMTLParser.ExprContext,i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(PastMTLParser.NUMBER)
            else:
                return self.getToken(PastMTLParser.NUMBER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimedSince" ):
                listener.enterTimedSince(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimedSince" ):
                listener.exitTimedSince(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedSince" ):
                return visitor.visitTimedSince(self)
            else:
                return visitor.visitChildren(self)


    class TimedSinceInfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.l = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PastMTLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PastMTLParser.ExprContext,i)

        def NUMBER(self):
            return self.getToken(PastMTLParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimedSinceInf" ):
                listener.enterTimedSinceInf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimedSinceInf" ):
                listener.exitTimedSinceInf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedSinceInf" ):
                return visitor.visitTimedSinceInf(self)
            else:
                return visitor.visitChildren(self)


    class AtomicContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.child = None # AtomContext
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(PastMTLParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic" ):
                listener.enterAtomic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic" ):
                listener.exitAtomic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic" ):
                return visitor.visitAtomic(self)
            else:
                return visitor.visitChildren(self)


    class GroupingContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrouping" ):
                listener.enterGrouping(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrouping" ):
                listener.exitGrouping(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrouping" ):
                return visitor.visitGrouping(self)
            else:
                return visitor.visitChildren(self)


    class TimedOnceContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.l = None # Token
            self.u = None # Token
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(PastMTLParser.NUMBER)
            else:
                return self.getToken(PastMTLParser.NUMBER, i)
        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimedOnce" ):
                listener.enterTimedOnce(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimedOnce" ):
                listener.exitTimedOnce(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedOnce" ):
                return visitor.visitTimedOnce(self)
            else:
                return visitor.visitChildren(self)


    class DisjunctionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PastMTLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PastMTLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisjunction" ):
                listener.enterDisjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisjunction" ):
                listener.exitDisjunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisjunction" ):
                return visitor.visitDisjunction(self)
            else:
                return visitor.visitChildren(self)


    class ImpliesContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PastMTLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PastMTLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplies" ):
                listener.enterImplies(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplies" ):
                listener.exitImplies(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplies" ):
                return visitor.visitImplies(self)
            else:
                return visitor.visitChildren(self)


    class ConjunctionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PastMTLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PastMTLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConjunction" ):
                listener.enterConjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConjunction" ):
                listener.exitConjunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConjunction" ):
                return visitor.visitConjunction(self)
            else:
                return visitor.visitChildren(self)


    class SinceContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PastMTLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PastMTLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSince" ):
                listener.enterSince(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSince" ):
                listener.exitSince(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSince" ):
                return visitor.visitSince(self)
            else:
                return visitor.visitChildren(self)


    class AlwaysContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlways" ):
                listener.enterAlways(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlways" ):
                listener.exitAlways(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlways" ):
                return visitor.visitAlways(self)
            else:
                return visitor.visitChildren(self)


    class TimedOnceInfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.ExprContext
            super().__init__(parser)
            self.l = None # Token
            self.child = None # ExprContext
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(PastMTLParser.NUMBER, 0)
        def expr(self):
            return self.getTypedRuleContext(PastMTLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimedOnceInf" ):
                listener.enterTimedOnceInf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimedOnceInf" ):
                listener.exitTimedOnceInf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedOnceInf" ):
                return visitor.visitTimedOnceInf(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PastMTLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = PastMTLParser.AtomicContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 15
                localctx.child = self.atom()
                pass

            elif la_ == 2:
                localctx = PastMTLParser.NegationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 16
                _la = self._input.LA(1)
                if not(_la==PastMTLParser.T__1 or _la==PastMTLParser.T__2):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 17
                localctx.child = self.expr(14)
                pass

            elif la_ == 3:
                localctx = PastMTLParser.OnceContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 18
                self.match(PastMTLParser.T__9)
                self.state = 19
                localctx.child = self.expr(10)
                pass

            elif la_ == 4:
                localctx = PastMTLParser.TimedOnceContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 20
                self.match(PastMTLParser.T__9)
                self.state = 21
                self.match(PastMTLParser.T__10)
                self.state = 22
                localctx.l = self.match(PastMTLParser.NUMBER)
                self.state = 23
                self.match(PastMTLParser.T__11)
                self.state = 24
                localctx.u = self.match(PastMTLParser.NUMBER)
                self.state = 25
                self.match(PastMTLParser.T__12)
                self.state = 26
                localctx.child = self.expr(9)
                pass

            elif la_ == 5:
                localctx = PastMTLParser.TimedOnceInfContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 27
                self.match(PastMTLParser.T__9)
                self.state = 28
                self.match(PastMTLParser.T__10)
                self.state = 29
                localctx.l = self.match(PastMTLParser.NUMBER)
                self.state = 30
                self.match(PastMTLParser.T__11)
                self.state = 31
                self.match(PastMTLParser.T__13)
                self.state = 32
                self.match(PastMTLParser.T__12)
                self.state = 33
                localctx.child = self.expr(8)
                pass

            elif la_ == 6:
                localctx = PastMTLParser.AlwaysContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 34
                self.match(PastMTLParser.T__14)
                self.state = 35
                localctx.child = self.expr(7)
                pass

            elif la_ == 7:
                localctx = PastMTLParser.TimedAlwaysContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 36
                self.match(PastMTLParser.T__14)
                self.state = 37
                self.match(PastMTLParser.T__10)
                self.state = 38
                localctx.l = self.match(PastMTLParser.NUMBER)
                self.state = 39
                self.match(PastMTLParser.T__11)
                self.state = 40
                localctx.u = self.match(PastMTLParser.NUMBER)
                self.state = 41
                self.match(PastMTLParser.T__12)
                self.state = 42
                localctx.child = self.expr(6)
                pass

            elif la_ == 8:
                localctx = PastMTLParser.TimedAlwaysInfContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 43
                self.match(PastMTLParser.T__14)
                self.state = 44
                self.match(PastMTLParser.T__10)
                self.state = 45
                localctx.l = self.match(PastMTLParser.NUMBER)
                self.state = 46
                self.match(PastMTLParser.T__11)
                self.state = 47
                self.match(PastMTLParser.T__13)
                self.state = 48
                self.match(PastMTLParser.T__12)
                self.state = 49
                localctx.child = self.expr(5)
                pass

            elif la_ == 9:
                localctx = PastMTLParser.GroupingContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 50
                self.match(PastMTLParser.T__16)
                self.state = 51
                localctx.child = self.expr(0)
                self.state = 52
                self.match(PastMTLParser.T__17)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 84
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = PastMTLParser.ConjunctionContext(self, PastMTLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 56
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 57
                        _la = self._input.LA(1)
                        if not(_la==PastMTLParser.T__3 or _la==PastMTLParser.T__4):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 58
                        localctx.right = self.expr(14)
                        pass

                    elif la_ == 2:
                        localctx = PastMTLParser.DisjunctionContext(self, PastMTLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 59
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 60
                        _la = self._input.LA(1)
                        if not(_la==PastMTLParser.T__5 or _la==PastMTLParser.T__6):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 61
                        localctx.right = self.expr(13)
                        pass

                    elif la_ == 3:
                        localctx = PastMTLParser.ImpliesContext(self, PastMTLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 62
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 63
                        _la = self._input.LA(1)
                        if not(_la==PastMTLParser.T__7 or _la==PastMTLParser.T__8):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 64
                        localctx.right = self.expr(12)
                        pass

                    elif la_ == 4:
                        localctx = PastMTLParser.SinceContext(self, PastMTLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 65
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 66
                        self.match(PastMTLParser.T__15)
                        self.state = 67
                        localctx.right = self.expr(5)
                        pass

                    elif la_ == 5:
                        localctx = PastMTLParser.TimedSinceContext(self, PastMTLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 68
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 69
                        self.match(PastMTLParser.T__15)
                        self.state = 70
                        self.match(PastMTLParser.T__10)
                        self.state = 71
                        localctx.l = self.match(PastMTLParser.NUMBER)
                        self.state = 72
                        self.match(PastMTLParser.T__11)
                        self.state = 73
                        localctx.u = self.match(PastMTLParser.NUMBER)
                        self.state = 74
                        self.match(PastMTLParser.T__12)
                        self.state = 75
                        localctx.right = self.expr(4)
                        pass

                    elif la_ == 6:
                        localctx = PastMTLParser.TimedSinceInfContext(self, PastMTLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 76
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 77
                        self.match(PastMTLParser.T__15)
                        self.state = 78
                        self.match(PastMTLParser.T__10)
                        self.state = 79
                        localctx.l = self.match(PastMTLParser.NUMBER)
                        self.state = 80
                        self.match(PastMTLParser.T__11)
                        self.state = 81
                        self.match(PastMTLParser.T__13)
                        self.state = 82
                        self.match(PastMTLParser.T__12)
                        self.state = 83
                        localctx.right = self.expr(3)
                        pass

             
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PastMTLParser.RULE_atom

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PropContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.AtomContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(PastMTLParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProp" ):
                listener.enterProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProp" ):
                listener.exitProp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProp" ):
                return visitor.visitProp(self)
            else:
                return visitor.visitChildren(self)


    class PredContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PastMTLParser.AtomContext
            super().__init__(parser)
            self.name = None # Token
            self.args = None # IdlistContext
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(PastMTLParser.IDENTIFIER, 0)
        def idlist(self):
            return self.getTypedRuleContext(PastMTLParser.IdlistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPred" ):
                listener.enterPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPred" ):
                listener.exitPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPred" ):
                return visitor.visitPred(self)
            else:
                return visitor.visitChildren(self)



    def atom(self):

        localctx = PastMTLParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atom)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = PastMTLParser.PropContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                localctx.name = self.match(PastMTLParser.IDENTIFIER)
                pass

            elif la_ == 2:
                localctx = PastMTLParser.PredContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                localctx.name = self.match(PastMTLParser.IDENTIFIER)
                self.state = 91
                self.match(PastMTLParser.T__16)
                self.state = 92
                localctx.args = self.idlist()
                self.state = 93
                self.match(PastMTLParser.T__17)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.param = None # Token

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PastMTLParser.IDENTIFIER)
            else:
                return self.getToken(PastMTLParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return PastMTLParser.RULE_idlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdlist" ):
                listener.enterIdlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdlist" ):
                listener.exitIdlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = PastMTLParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_idlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            localctx.param = self.match(PastMTLParser.IDENTIFIER)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PastMTLParser.T__11:
                self.state = 98
                self.match(PastMTLParser.T__11)
                self.state = 99
                localctx.param = self.match(PastMTLParser.IDENTIFIER)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
